# EGT_stroma

./: .gitignore  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
analysis/: reproduce_manuscript_results.py
data/: digitized_composition.csv  digitized_volume.csv
data_templates/: composition_observations.csv  luminescence_and_volume.csv
examples/: reproduce_model_demo.py
results/: adaptive_heatmap.csv  reconstruction_summary.json  treatment_comparison.csv
scripts/: digitize_mouse_data.py
src/emdr_model/: __init__.py  calibration.py  core.py  plotting.py  schedules.py
tests/: test_model.py
