[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emdr-model-reconstruction"
version = "0.1.0"
description = "Reconstructed evolutionary game model of environment-mediated drug resistance"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
